Alterado QrCode para versão 2

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -425,14 +425,13 @@ URL-ConsultaNFCe=http://homnfce.sefaz.am.gov.br/nfceweb/formConsulta.do
 
 [NFCe_BA_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=http://nfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
+URL-QRCode=http://nfe.sefaz.ba.gov.br/servicos/nfce/modulos/geral/NFCEC_consulta_chave_acesso.aspx
 URL-ConsultaNFCe=http://www.sefaz.ba.gov.br/nfce/consulta
 
 [NFCe_BA_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://hnfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
+URL-QRCode=http://hnfe.sefaz.ba.gov.br/servicos/nfce/modulos/geral/NFCEC_consulta_chave_acesso.aspx
 URL-ConsultaNFCe=http://hinternet.sefaz.ba.gov.br/nfce/consulta
-
 
 [NFCe_CE_P]
 URL-QRCode=http://nfce.sefaz.ce.gov.br/pages/ShowNFCe.html
@@ -558,12 +557,12 @@ URL-ConsultaNFCe=http://www.receita.pb.gov.br/nfce
 [NFCe_PB_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://www.receita.pb.gov.br/nfcehom
-URL-ConsultaNFCe=http://www.receita.pb.gov.br/nfcehom
+URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PE_P]
 Usar=NFCe_SVRS_P
 URL-QRCode=http://nfce.sefaz.pe.gov.br/nfce-web/consultarNFCe
-URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce-web/consultarNFCe
+URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PE_H]
 Usar=NFCe_SVRS_H
