--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,16 @@
 
 	<distributionManagement>
 		<repository>
-			<id>nexus</id>
-			<url>http://192.168.3.195:8081/nexus/content/repositories/releases/</url>
+            <id>autocom</id>
+            <url>http://nexus.autocomsistemas.com.br/nexus/content/repositories/autocom/</url>
 		</repository>
 	</distributionManagement>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>10</java.version>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>1.8</java.version>
     </properties>
 
     <dependencies>
