- Corrigido Urls MT NFe Homologação

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -159,13 +159,13 @@ NFeAutorizacao_4.00=https://nfe.sefaz.mt.gov.br/nfews/v2/services/NfeAutorizacao
 NFeRetAutorizacao_4.00=https://nfe.sefaz.mt.gov.br/nfews/v2/services/NfeRetAutorizacao4?wsdl
 
 [NFe_MT_H]
-NFeRetAutorizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeRetAutorizacao4
-RecepcaoEvento_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/RecepcaoEvento4
-NfeConsultaProtocolo_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeConsulta4
-NFeAutorizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeAutorizacao4
-NfeInutilizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeInutilizacao4
-NfeConsultaCadastro_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/CadConsultaCadastro4
-NfeStatusServico_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeStatusServico4
+NFeRetAutorizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeRetAutorizacao4?wsdl
+RecepcaoEvento_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/RecepcaoEvento4?wsdl
+NfeConsultaProtocolo_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeConsulta4?wsdl
+NFeAutorizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeAutorizacao4?wsdl
+NfeInutilizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeInutilizacao4?wsdl
+NfeConsultaCadastro_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/CadConsultaCadastro4?wsdl
+NfeStatusServico_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeStatusServico4?wsdl
 
 [NFe_PA_P]
 Usar=NFe_SVAN_P
