- Corrigido Urls PE NFCe Homologação/Produção

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -561,13 +561,13 @@ URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PE_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=http://nfce.sefaz.pe.gov.br/nfce-web/consultarNFCe
+URL-QRCode=http://nfce.sefaz.pe.gov.br/nfce/consulta
 URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PE_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://nfcehomolog.sefaz.pe.gov.br/nfce-web/consultarNFCe
-URL-ConsultaNFCe=http://nfcehomolog.sefaz.pe.gov.br/nfce-web/consultarNFCe
+URL-QRCode=http://nfcehomolog.sefaz.pe.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://nfcehomolog.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PI_P]
 Usar=NFCe_SVRS_P
