--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -358,6 +358,11 @@ NFeAutorizacao_4.00=https://nfe.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://nfe.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
 
 [NFe_SVC-RS_H]
+NfeConsultaProtocolo_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeConsulta/NfeConsulta4.asmx
+NfeStatusServico_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx
+RecepcaoEvento_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
+NFeAutorizacao_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
+NFeRetAutorizacao_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
 
 [NFe_AN_P]
 RecepcaoEvento_1.00=https://www.nfe.fazenda.gov.br/RecepcaoEvento/RecepcaoEvento.asmx
@@ -494,8 +499,12 @@ URL-QRCode=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultarNFCe.jsp
 URL-ConsultaNFCe=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultaNFe.do
 
 [NFCe_MG_P]
+URL-QRCode=http://www.fazenda.mg.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://www.fazenda.mg.gov.br/nfce/consulta
 
 [NFCe_MG_H]
+URL-QRCode=http://www.fazenda.mg.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://www.fazenda.mg.gov.br/nfce/consulta
 
 [NFCe_MS_P]
 NFeAutorizacao_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
