--- a/src/main/resources/WebServicesNfe.properties
+++ b/src/main/resources/WebServicesNfe.properties
@@ -354,6 +354,11 @@ NFe.SVC-RS.P.NfeAutorizacao_4_00=https://nfe.svrs.rs.gov.br/ws/NfeAutorizacao/NF
 NFe.SVC-RS.P.NfeRetAutorizacao_4_00=https://nfe.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
 
 -- [NFe_SVC-RS_H]
+NfeConsultaProtocolo_4_00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeConsulta/NfeConsulta4.asmx
+NfeStatusServico_4_00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx
+RecepcaoEvento_4_00=https://nfe-homologacao.svrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
+NfeAutorizacao_4_00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
+NfeRetAutorizacao_4_00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
 
 -- [NFe_AN_P]
 NFe.AN.P.RecepcaoEvento_1_00=https://www.nfe.fazenda.gov.br/RecepcaoEvento/RecepcaoEvento.asmx
@@ -490,8 +495,13 @@ NFCe.MA.H.URL-QRCode=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultarNFCe.js
 NFCe.MA.H.URL-ConsultaNFCe=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultaNFe.do
 
 -- [NFCe_MG_P]
+NFCe.MG.P.URL-QRCode=http://www.fazenda.mg.gov.br/nfce/consulta
+NFCe.MG.P.URL-ConsultaNFCe=http://www.fazenda.mg.gov.br/nfce/consulta
 
 -- [NFCe_MG_H]
+NFCe.MG.H.URL-QRCode=http://www.fazenda.mg.gov.br/nfce/consulta
+NFCe.MG.H.URL-ConsultaNFCe=http://www.fazenda.mg.gov.br/nfce/consulta
+
 
 -- [NFCe_MS_P]
 NFCe.MS.P.NfeAutorizacao_4_00=https://nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
@@ -658,11 +668,11 @@ NFCe.RR.H.URL-ConsultaNFCe=http://200.174.88.103:8080/nfce/servlet/wp_consulta_n
 
 -- [NFCe_SC_P]
 NFCe.SC.P.Usar=NFCe.SVRS.P
--- revisar, aqui nao entendi SC não tem NFCe, não deveria ter nada aqui... acima, igual MG
+-- revisar, aqui nao entendi SC não tem NFCe(ate onde sei), não deveria ter nada aqui...
 
 -- [NFCe_SC_H]
 NFCe.SC.H.Usar=NFCe.SVRS.H
--- revisar, aqui nao entendi SC não tem NFCe, não deveria ter nada aqui... acima, igual MG
+-- revisar, aqui nao entendi SC não tem NFCe(ate onde sei), não deveria ter nada aqui...
 
 -- [NFCe_SE_P]
 NFCe.SE.P.Usar=NFCe.SVRS.P
