- Corrigido URLs MG e TO

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -113,7 +113,7 @@ Usar=NFe_SVAN_H
 NfeConsultaCadastro_4.0=https://sistemas.sefaz.ma.gov.br/wscadastro/CadConsultaCadastro2?wsdl
 
 [NFe_MG_P]
-NfeConsultaCadastro_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
+NfeConsultaCadastro_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/CadConsultaCadastro4
 NfeInutilizacao_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeInutilizacao4
 NfeConsultaProtocolo_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeConsultaProtocolo4
 NfeStatusServico_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeStatusServico4
@@ -122,7 +122,7 @@ NFeRetAutorizacao_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeRetAutoriz
 RecepcaoEvento_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeRecepcaoEvento4
 
 [NFe_MG_H]
-NfeConsultaCadastro_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
+NfeConsultaCadastro_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/CadConsultaCadastro4
 NFeAutorizacao_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeAutorizacao4
 NFeConsultaProtocolo_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeConsultaProtocolo4
 NFeInutilizacao_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeInutilizacao4
@@ -708,13 +708,13 @@ URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/consulta
 
 [NFCe_TO_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=http://apps.sefaz.to.gov.br/portal-nfce/qrcodeNFCe
-URL-ConsultaNFCe=http://apps.sefaz.to.gov.br/portal-nfce/consultarNFCe.jsf
+URL-QRCode=http://www.sefaz.to.gov.br/nfce/qrcode
+URL-ConsultaNFCe=https://www.sefaz.to.gov.br/nfce/consulta
 
 [NFCe_TO_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://apps.sefaz.to.gov.br/portal-nfce-homologacao/qrcodeNFCe
-URL-ConsultaNFCe=http://apps.sefaz.to.gov.br/portal-nfce-homologacao/consultarNFCe.jsf
+URL-QRCode=http://homologacao.sefaz.to.gov.br/nfce/qrcode
+URL-ConsultaNFCe=http://homologacao.sefaz.to.gov.br/nfce/consulta
 
 [NFCe_SVAN_P]
 
