- Adicionado Compatibilidade para Java 11

--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,24 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+
+        <!--Java 11-->
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0.1</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
