- Adicionado URL NFCe MG Produção e Homologação

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -499,12 +499,24 @@ URL-QRCode=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultarNFCe.jsp
 URL-ConsultaNFCe=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultaNFe.do
 
 [NFCe_MG_P]
-URL-QRCode=http://www.fazenda.mg.gov.br/nfce/consulta
-URL-ConsultaNFCe=http://www.fazenda.mg.gov.br/nfce/consulta
+RecepcaoEvento_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeRecepcaoEvento4
+NfeInutilizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeInutilizacao4
+NfeConsultaProtocolo_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeConsultaProtocolo4
+NfeStatusServico_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeStatusServico4
+NFeAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
+URL-QRCode=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
+URL-ConsultaNFCe=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/consultaarg.xhtml
 
 [NFCe_MG_H]
-URL-QRCode=http://www.fazenda.mg.gov.br/nfce/consulta
-URL-ConsultaNFCe=http://www.fazenda.mg.gov.br/nfce/consulta
+RecepcaoEvento_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeRecepcaoEvento4
+NfeInutilizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeInutilizacao4
+NfeConsultaProtocolo_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeConsultaProtocolo4
+NfeStatusServico_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeStatusServico4
+NFeAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
+NFeRetAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
+URL-QRCode=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
+URL-ConsultaNFCe=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/consultaarg.xhtml
 
 [NFCe_MS_P]
 NFeAutorizacao_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
