--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,14 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.3.0</version>
+                <configuration>
+                    <repoToken>paGe4qkZvPNJtvxqY8NaJN5ImZO56RqB6</repoToken>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 </project>
