--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -506,7 +506,7 @@ NfeStatusServico_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeStatusServ
 NFeAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
 URL-QRCode=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
-URL-ConsultaNFCe=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/consultaarg.xhtml
+URL-ConsultaNFCe=http://nfce.fazenda.mg.gov.br/portalnfce
 
 [NFCe_MG_H]
 RecepcaoEvento_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeRecepcaoEvento4
@@ -516,7 +516,7 @@ NfeStatusServico_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeStatusSer
 NFeAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
 URL-QRCode=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
-URL-ConsultaNFCe=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/consultaarg.xhtml
+URL-ConsultaNFCe=http://hnfce.fazenda.mg.gov.br/portalnfce
 
 [NFCe_MS_P]
 NFeAutorizacao_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
