- Corrigido erro Consulta Cadastro

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -180,7 +180,7 @@ Usar=NFe_SVRS_P
 Usar=NFe_SVRS_H
 
 [NFe_PE_P]
-NfeConsultaCadastro_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2
+NfeConsultaCadastro_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro4
 NfeInutilizacao_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeInutilizacao4
 NfeConsultaProtocolo_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeConsultaProtocolo4
 NfeStatusServico_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeStatusServico4
@@ -192,7 +192,7 @@ NFeRetAutorizacao_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeRetAu
 NfeInutilizacao_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/NFeInutilizacao4?wsdl
 NfeConsultaProtocolo_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/NFeConsultaProtocolo4?wsdl
 NfeStatusServico_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/NFeStatusServico4?wsdl
-NfeConsultaCadastro_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro4?wsdl
+NfeConsultaCadastro_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro4
 RecepcaoEvento_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/NFeRecepcaoEvento4?wsdl
 NFeAutorizacao_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/NFeAutorizacao4?wsdl
 NFeRetAutorizacao_4.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/NFeRetAutorizacao4?wsdl
