- Adicionado validação de certificado com documento correto. - Corrigido Consulta Cadastro MT

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -588,7 +588,7 @@ URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
 [NFCe_PE_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://nfcehomolog.sefaz.pe.gov.br/nfce-web/consultarNFCe
-URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://nfcehomolog.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PI_P]
 Usar=NFCe_SVRS_P
@@ -669,7 +669,7 @@ NfeStatusServico_4.00=https://nfce-homologacao.sefazrs.rs.gov.br/ws/NfeStatusSer
 NFeAutorizacao_4.00=https://nfce-homologacao.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfce-homologacao.sefazrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
 URL-QRCode=https://www.sefaz.rs.gov.br/NFCE/NFCE-COM.aspx
-URL-ConsultaNFCe=https://www.sefaz.rs.gov.br/NFE/NFE-NFC.aspx
+URL-ConsultaNFCe=www.sefaz.rs.gov.br/nfce/consulta
 
 [NFCe_RR_P]
 Usar=NFCe_SVRS_P
