--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -384,7 +384,7 @@ URL-ConsultaNFCe=http://www.sefaznet.ac.gov.br/nfce/
 [NFCe_AC_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://hml.sefaznet.ac.gov.br/nfce/qrcode
-URL-ConsultaNFCe=http://hml.sefaznet.ac.gov.br/nfce/
+URL-ConsultaNFCe=www.sefaznet.ac.gov.br/nfce/consulta
 
 [NFCe_AL_P]
 Usar=NFCe_SVRS_P
@@ -394,7 +394,7 @@ URL-ConsultaNFCe=http://nfce.sefaz.al.gov.br/consultaNFCe.htm
 [NFCe_AL_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://nfce.sefaz.al.gov.br/QRCode/consultarNFCe.jsp
-URL-ConsultaNFCe=http://nfce.sefaz.al.gov.br/consultaNFCe.htm
+URL-ConsultaNFCe=www.sefaz.al.gov.br/nfce/consulta
 
 [NFCe_AP_P]
 Usar=NFCe_SVRS_P
@@ -404,7 +404,7 @@ URL-ConsultaNFCe=https://www.sefaz.ap.gov.br/sate/seg/SEGf_AcessarFuncao.jsp?cdF
 [NFCe_AP_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=https://www.sefaz.ap.gov.br/nfcehml/nfce.php
-URL-ConsultaNFCe=https://www.sefaz.ap.gov.br/sate1/seg/SEGf_AcessarFuncao.jsp?cdFuncao=FIS_1261
+URL-ConsultaNFCe=www.sefaz.ap.gov.br/nfce/consulta
 
 [NFCe_AM_P]
 AdministrarCSCNFCe_1.00=https://nfce.sefaz.am.gov.br/nfce-services/services/CscNFCe
@@ -454,7 +454,7 @@ URL-ConsultaNFCe=http://dec.fazenda.df.gov.br/nfce
 [NFCe_DF_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://dec.fazenda.df.gov.br/ConsultarNFCe.aspx
-URL-ConsultaNFCe=http://dec.fazenda.df.gov.br/nfce
+URL-ConsultaNFCe=www.fazenda.df.gov.br/nfce/consulta
 
 [NFCe_ES_P]
 Usar=NFCe_SVRS_P
@@ -464,7 +464,7 @@ URL-ConsultaNFCe=http://app.sefaz.es.gov.br/ConsultaNFCe
 [NFCe_ES_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://homologacao.sefaz.es.gov.br/ConsultaNFCe/qrcode.aspx
-URL-ConsultaNFCe=http://app.sefaz.es.gov.br/ConsultaNFCe
+URL-ConsultaNFCe=www.sefaz.es.gov.br/nfce/consulta
 
 [NFCe_GO_P]
 RecepcaoEvento_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeRecepcaoEvento4?wsdl
@@ -496,7 +496,7 @@ URL-ConsultaNFCe=http://www.nfce.sefaz.ma.gov.br/portal/consultaNFe.do
 [NFCe_MA_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultarNFCe.jsp
-URL-ConsultaNFCe=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultaNFe.do
+URL-ConsultaNFCe=www.sefaz.ma.gov.br/nfce/consulta
 
 [NFCe_MG_P]
 RecepcaoEvento_4.00=https://nfce.fazenda.mg.gov.br/nfce/services/NFeRecepcaoEvento4
@@ -568,7 +568,7 @@ URL-ConsultaNFCe=	https://appnfc.sefa.pa.gov.br/portal/view/consultas/nfce/consu
 [NFCe_PA_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=https://appnfc.sefa.pa.gov.br/portal-homologacao/view/consultas/nfce/nfceForm.seam
-URL-ConsultaNFCe=https://appnfc.sefa.pa.gov.br/portal-homologacao/view/consultas/nfce/nfceForm.seam
+URL-ConsultaNFCe=www.sefa.pa.gov.br/nfce/consulta
 
 [NFCe_PB_P]
 Usar=NFCe_SVRS_P
@@ -578,17 +578,17 @@ URL-ConsultaNFCe=http://www.receita.pb.gov.br/nfce
 [NFCe_PB_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://www.receita.pb.gov.br/nfcehom
-URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
+URL-ConsultaNFCe=www.receita.pb.gov.br/nfcehom
 
 [NFCe_PE_P]
 Usar=NFCe_SVRS_P
 URL-QRCode=http://nfce.sefaz.pe.gov.br/nfce-web/consultarNFCe
-URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://www.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PE_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://nfcehomolog.sefaz.pe.gov.br/nfce-web/consultarNFCe
-URL-ConsultaNFCe=http://nfcehomolog.sefaz.pe.gov.br/nfce/consulta
+URL-ConsultaNFCe=nfce.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PI_P]
 Usar=NFCe_SVRS_P
@@ -598,7 +598,7 @@ URL-ConsultaNFCe=http://webas.sefaz.pi.gov.br/nfceweb/consultarNFCe.jsf
 [NFCe_PI_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://webas.sefaz.pi.gov.br/nfceweb-homologacao/consultarNFCe.jsf
-URL-ConsultaNFCe=http://webas.sefaz.pi.gov.br/nfceweb-homologacao/consultarNFCe.jsf
+URL-ConsultaNFCe=www.sefaz.pi.gov.br/nfce/consulta
 
 [NFCe_PR_P]
 NfeAutorizacao_4.00=https://nfce.sefa.pr.gov.br/nfce/NFeAutorizacao4
@@ -630,7 +630,7 @@ URL-ConsultaNFCe=http://nfce.fazenda.rj.gov.br/consulta
 [NFCe_RJ_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://www4.fazenda.rj.gov.br/consultaNFCe/QRCode
-URL-ConsultaNFCe=http://nfce.fazenda.rj.gov.br/consulta
+URL-ConsultaNFCe=www.fazenda.rj.gov.br/nfce/consulta
 
 [NFCe_RN_P]
 Usar=NFCe_SVRS_P
@@ -640,7 +640,7 @@ URL-ConsultaNFCe=http://nfce.set.rn.gov.br/portalDFE/NFCe/ConsultaNFCe.aspx
 [NFCe_RN_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://hom.nfce.set.rn.gov.br/consultarNFCe.aspx
-URL-ConsultaNFCe=http://hom.nfce.set.rn.gov.br/portalDFE/NFCe/ConsultaNFCe.aspx
+URL-ConsultaNFCe=www.set.rn.gov.br/nfce/consulta
 
 [NFCe_RO_P]
 Usar=NFCe_SVRS_P
@@ -650,7 +650,7 @@ URL-ConsultaNFCe=http://www.nfce.sefin.ro.gov.br
 [NFCe_RO_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://www.nfce.sefin.ro.gov.br/consultanfce/consulta.jsp
-URL-ConsultaNFCe=http://www.nfce.sefin.ro.gov.br/consultaAmbHomologacao.jsp
+URL-ConsultaNFCe=www.sefin.ro.gov.br/nfce/consulta
 
 [NFCe_RS_P]
 NfeStatusServico_4.00=https://nfce.sefazrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx
@@ -679,7 +679,7 @@ URL-ConsultaNFCe=https://www.sefaz.rr.gov.br/nfce/servlet/wp_consulta_nfce
 [NFCe_RR_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://200.174.88.103:8080/nfce/servlet/qrcode
-URL-ConsultaNFCe=http://200.174.88.103:8080/nfce/servlet/wp_consulta_nfce
+URL-ConsultaNFCe=www.sefaz.rr.gov.br/nfce/consulta
 
 [NFCe_SC_P]
 Usar=NFCe_SVRS_P
@@ -695,7 +695,7 @@ URL-ConsultaNFCe=http://www.nfce.se.gov.br/portal/consultarNFCe.jsp
 [NFCe_SE_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://www.hom.nfe.se.gov.br/portal/consultarNFCe.jsp
-URL-ConsultaNFCe=http://www.hom.nfe.se.gov.br/portal/consultarNFCe.jsp
+URL-ConsultaNFCe=http://www.hom.nfe.se.gov.br/nfce/consulta
 
 [NFCe_SP_P]
 NFeAutorizacao_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeAutorizacao4.asmx
@@ -726,7 +726,7 @@ URL-ConsultaNFCe=https://www.sefaz.to.gov.br/nfce/consulta
 [NFCe_TO_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://homologacao.sefaz.to.gov.br/nfce/qrcode
-URL-ConsultaNFCe=http://homologacao.sefaz.to.gov.br/nfce/consulta
+URL-ConsultaNFCe=www.sefaz.to.gov.br/nfce/consulta
 
 [NFCe_SVAN_P]
 
