- Corrigido URL Consulta NFCe: AC, AL, AP, DF, ES, MA, PA, PB, PE, PI, RJ, RN, RO, RS, RR, SE, TO.

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -721,12 +721,12 @@ URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/consulta
 [NFCe_TO_P]
 Usar=NFCe_SVRS_P
 URL-QRCode=http://www.sefaz.to.gov.br/nfce/qrcode
-URL-ConsultaNFCe=https://www.sefaz.to.gov.br/nfce/consulta
+URL-ConsultaNFCe=www.sefaz.to.gov.br/nfce/consulta
 
 [NFCe_TO_H]
 Usar=NFCe_SVRS_H
 URL-QRCode=http://homologacao.sefaz.to.gov.br/nfce/qrcode
-URL-ConsultaNFCe=www.sefaz.to.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://homologacao.sefaz.to.gov.br/nfce/consulta.jsf
 
 [NFCe_SVAN_P]
 
