- Corrigido Mais URLs

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -516,7 +516,7 @@ NfeStatusServico_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeStatusSer
 NFeAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://hnfce.fazenda.mg.gov.br/nfce/services/NFeRetAutorizacao4
 URL-QRCode=https://nfce.fazenda.mg.gov.br/portalnfce/sistema/qrcode.xhtml
-URL-ConsultaNFCe=http://hnfce.fazenda.mg.gov.br/portalnfce/
+URL-ConsultaNFCe=http://hnfce.fazenda.mg.gov.br/portalnfce
 
 [NFCe_MS_P]
 NFeAutorizacao_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
@@ -527,7 +527,7 @@ NfeConsultaProtocolo_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeConsultaProtocolo4
 NfeStatusServico_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeStatusServico4
 NfeConsultaCadastro_4.00=https://nfe.sefaz.ms.gov.br/ws/CadConsultaCadastro4
 URL-QRCode=http://www.dfe.ms.gov.br/nfce/qrcode
-URL-ConsultaNFCe=www.dfe.ms.gov.br/nfce
+URL-ConsultaNFCe=http://www.dfe.ms.gov.br/nfce/consulta
 
 [NFCe_MS_H]
 NfeAutorizacao_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
@@ -538,7 +538,7 @@ NfeStatusServico_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeStatusServico4
 RecepcaoEvento_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeRecepcaoEvento4
 NfeConsultaCadastro_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/CadConsultaCadastro4
 URL-QRCode=http://www.dfe.ms.gov.br/nfce/qrcode
-URL-ConsultaNFCe=www.dfe.ms.gov.br/nfce
+URL-ConsultaNFCe=http://www.dfe.ms.gov.br/nfce/consulta
 
 [NFCe_MT_P]
 RecepcaoEvento_4.00=https://nfce.sefaz.mt.gov.br/nfcews/services/RecepcaoEvento4
@@ -609,7 +609,7 @@ NfeStatusServico_4.00=https://nfce.sefa.pr.gov.br/nfce/NFeStatusServico4
 RecepcaoEvento_4.00=https://nfce.sefa.pr.gov.br/nfce/NFeRecepcaoEvento4
 NfeConsultaCadastro_4.00=https://nfce.sefa.pr.gov.br/nfce/CadConsultaCadastro4
 URL-QRCode=http://www.fazenda.pr.gov.br/nfce/qrcode/
-URL-ConsultaNFCe=www.fazenda.pr.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://www.fazenda.pr.gov.br/nfce/consulta
 
 [NFCe_PR_H]
 NfeAutorizacao_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeAutorizacao4
@@ -620,7 +620,7 @@ NfeStatusServico_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeStatusServ
 RecepcaoEvento_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeRecepcaoEvento4
 NfeConsultaCadastro_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/CadConsultaCadastro4
 URL-QRCode=http://www.fazenda.pr.gov.br/nfce/qrcode/
-URL-ConsultaNFCe=www.fazenda.pr.gov.br/nfce/consulta
+URL-ConsultaNFCe=http://www.fazenda.pr.gov.br/nfce/consulta
 
 [NFCe_RJ_P]
 Usar=NFCe_SVRS_P
