--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,8 @@
 		<dependency>
 			<groupId>br.com.swconsultoria</groupId>
 			<artifactId>java_certificado</artifactId>
-            <version>2.1</version>
+            <version>2.2</version>
 		</dependency>
-
 		<!-- Ini4J -->
 		<dependency>
 			<groupId>org.ini4j</groupId>
@@ -121,6 +120,19 @@
             <groupId>org.apache.ws.commons.axiom</groupId>
             <artifactId>axiom-api</artifactId>
             <version>1.2.20</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jmockit</groupId>
+            <artifactId>jmockit</artifactId>
+            <version>1.24</version>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
