--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
 				<!-- resposavel por manter mvn-repositorio atualizado -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-install-plugin</artifactId>
-                <version>2.5.2</version>
+                <version>3.0.0-M1</version>
                 <executions>
                     <execution>
                         <phase>install</phase>
