--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -592,12 +592,12 @@ URL-ConsultaNFCe=nfce.sefaz.pe.gov.br/nfce/consulta
 
 [NFCe_PI_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=http://webas.sefaz.pi.gov.br/nfceweb/consultarNFCe.jsf
+URL-QRCode=http://www.fazenda.pi.gov.br/nfce/qrcode
 URL-ConsultaNFCe=www.sefaz.pi.gov.br/nfce/consulta
 
 [NFCe_PI_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://webas.sefaz.pi.gov.br/nfceweb-homologacao/consultarNFCe.jsf
+URL-QRCode=http://www.fazenda.pi.gov.br/nfce/qrcode
 URL-ConsultaNFCe=www.sefaz.pi.gov.br/nfce/consulta
 
 [NFCe_PR_P]
