--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <url>git@github.com:Samuel-Oliveira/Java_NFe.git</url>
         <connection>scm:git:git@github.com:Samuel-Oliveira/Java_NFe.git</connection>
         <developerConnection>scm:git:git@github.com:Samuel-Oliveira/Java_NFe.git</developerConnection>
-        <tag>java-nfe-4.00.10</tag>
+        <tag>java-nfe</tag>
     </scm>
 
     <properties>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>br.com.swconsultoria</groupId>
             <artifactId>java_certificado</artifactId>
-            <version>2.2</version>
+            <version>2.3-SNAPSHOT</version>
         </dependency>
         <!-- Ini4J -->
         <dependency>
