- Corrigido URL HOmologação NFCe AM

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -425,8 +425,8 @@ NfeInutilizacao_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/
 NfeAutorizacao_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/NfeAutorizacao4
 NFeRetAutorizacao_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/NfeRetAutorizacao4
 RecepcaoEvento_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/RecepcaoEvento4
-URL-QRCode=http://homnfce.sefaz.am.gov.br/nfceweb/consultarNFCe.jsp
-URL-ConsultaNFCe=www.sefaz.am.gov.br/nfce/consulta
+URL-QRCode=https://sistemas.sefaz.am.gov.br/nfceweb-hom/consultarNFCe.jsp
+URL-ConsultaNFCe=https://sistemas.sefaz.am.gov.br/nfceweb-hom/formConsulta.do
 
 [NFCe_BA_P]
 Usar=NFCe_SVRS_P
