- Corrigido Conflito de dependencia com Spring (servlet-api)

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
             <groupId>org.apache.axis2</groupId>
             <artifactId>axis2-kernel</artifactId>
             <version>1.7.5</version>
+            <exclusions>
+                <exclusion>
+                    <artifactId>servlet-api</artifactId>
+                    <groupId>javax.servlet</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
