- Atualizado WebService do Para para SVRS

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -168,10 +168,10 @@ NfeConsultaCadastro_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/C
 NfeStatusServico_4.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeStatusServico4?wsdl
 
 [NFe_PA_P]
-Usar=NFe_SVAN_P
+Usar=NFe_SVRS_P
 
 [NFe_PA_H]
-Usar=NFe_SVAN_H
+Usar=NFe_SVRS_H
 
 [NFe_PB_P]
 Usar=NFe_SVRS_P
