- Corrigido URL QR-COde homologação AC

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -383,7 +383,7 @@ URL-ConsultaNFCe=www.sefaznet.ac.gov.br/nfce/consulta
 
 [NFCe_AC_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://hml.sefaznet.ac.gov.br/nfce/qrcode
+URL-QRCode=http://www.hml.sefaznet.ac.gov.br/nfce/qrcode
 URL-ConsultaNFCe=www.sefaznet.ac.gov.br/nfce/consulta
 
 [NFCe_AL_P]
