--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>br.com.swconsultoria</groupId>
             <artifactId>java_certificado</artifactId>
-            <version>2.3b</version>
+            <version>2.3c</version>
         </dependency>
         <!-- Ini4J -->
         <dependency>
