Ajuste na url do QRCode da DF

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -460,12 +460,12 @@ URL-ConsultaNFCe=www.sefaz.ce.gov.br/nfce/consulta
 
 [NFCe_DF_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=http://dec.fazenda.df.gov.br/ConsultarNFCe.aspx
+URL-QRCode=https://www.fazenda.df.gov.br/nfce/qrcode
 URL-ConsultaNFCe=www.fazenda.df.gov.br/nfce/consulta
 
 [NFCe_DF_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://dec.fazenda.df.gov.br/ConsultarNFCe.aspx
+URL-QRCode=https://www.fazenda.df.gov.br/nfce/qrcode
 URL-ConsultaNFCe=www.fazenda.df.gov.br/nfce/consulta
 
 [NFCe_ES_P]
