--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -584,13 +584,13 @@ URL-ConsultaNFCe=www.sefa.pa.gov.br/nfce/consulta
 
 [NFCe_PB_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=http://www.receita.pb.gov.br/nfce
-URL-ConsultaNFCe=www.receita.pb.gov.br/nfce/consulta
+URL-QRCode=http://www.sefaz.pb.gov.br/nfce
+URL-ConsultaNFCe=www.sefaz.pb.gov.br/nfce/consulta
 
 [NFCe_PB_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://www.receita.pb.gov.br/nfcehom
-URL-ConsultaNFCe=www.receita.pb.gov.br/nfcehom
+URL-QRCode=http://www.sefaz.pb.gov.br/nfcehom
+URL-ConsultaNFCe=www.sefaz.pb.gov.br/nfcehom
 
 [NFCe_PE_P]
 Usar=NFCe_SVRS_P
