Adicionado URLS NFCe de Santa Catarina

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -696,9 +696,13 @@ URL-ConsultaNFCe=www.sefaz.rr.gov.br/nfce/consulta
 
 [NFCe_SC_P]
 Usar=NFCe_SVRS_P
+URL-QRCode=https://sat.sef.sc.gov.br/nfce/consulta?p=
+URL-ConsultaNFCe=https://sat.sef.sc.gov.br/nfce/consulta
 
 [NFCe_SC_H]
 Usar=NFCe_SVRS_H
+URL-QRCode=https://hom.sat.sef.sc.gov.br/nfce/consulta?p=
+URL-ConsultaNFCe=https://hom.sat.sef.sc.gov.br/nfce/consulta
 
 [NFCe_SE_P]
 Usar=NFCe_SVRS_P
